just applied several code rearrangements based on palantir-java-format rules